lint ts fix problem

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,7 @@
 
 {
     "Язык": "Русский",
-    "Страница не найдена" : "Страница не найдена"
+    "Страница не найдена" : "Страница не найдена",
+    "Главная": "Главная",
+    "О сайте": "О сайте"
 }
