add buttom themes, upgrade sidebar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
     "Язык": "English",
+    "Короткая версия": "En",
     "Страница не найдена" : "Page not found",
     "Главная": "Main",
     "О сайте": "About"
