--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,7 @@
 
 {
     "Язык": "Русский",
+    "Короткая версия": "Ru",
     "Страница не найдена" : "Страница не найдена",
     "Главная": "Главная",
     "О сайте": "О сайте"
