--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,6 @@
     "Короткая версия": "En",
     "Страница не найдена" : "Page not found",
     "Главная": "Main",
-    "О сайте": "About"
+    "О сайте": "About",
+    "Войти": "Sign in"
 }
