--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
     "Короткая версия": "Ru",
     "Страница не найдена" : "Страница не найдена",
     "Главная": "Главная",
-    "О сайте": "О сайте"
+    "О сайте": "О сайте",
+    "Войти": "Войти"
 }
