--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,8 @@
     "Страница не найдена" : "Страница не найдена",
     "Главная": "Главная",
     "О сайте": "О сайте",
-    "Войти": "Войти"
+    "Войти": "Войти",
+    "Выйти": "Выйти",
+    "Введите имя пользователя": "Введите имя пользователя",
+    "Введите пароль": "Введите пароль"
 }
