--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,9 @@
     "Войти": "Войти",
     "Выйти": "Выйти",
     "Введите имя пользователя": "Введите имя пользователя",
-    "Введите пароль": "Введите пароль"
+    "Введите пароль": "Введите пароль",
+    "Профиль": "Профиль",
+    "Статьи": "Статьи",
+    "Укажите валюту>": "Укажите валюту>",
+    "Укажите страну>": "Укажите страну>>"
 }
