--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
-    "Язык": "English",
-    "Короткая версия": "En",
+    "Язык": "EN",
+    "Короткая версия": "EN",
     "Страница не найдена" : "Page not found",
     "Главная": "Main",
     "О сайте": "About",
