--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,7 @@
 
 {
-    "Язык": "Русский",
-    "Короткая версия": "Ru",
+    "Язык": "RU",
+    "Короткая версия": "RU",
     "Страница не найдена" : "Страница не найдена",
     "Главная": "Главная",
     "О сайте": "О сайте",
