add edit widget, plural forms, details container

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,8 @@
     "Профиль": "Profile",
     "Статьи": "Articles",
     "Укажите валюту>": "Currency>",
-    "Укажите страну>": "Country>"
+    "Укажите страну>": "Country>",
+    "{{count}} просмотров_zero": "{{count}} views",
+    "{{count}} просмотров_one": "{{count}} view",
+    "{{count}} просмотров_other": "{{count}} views"
 }
