--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,9 @@
     "Профиль": "Профиль",
     "Статьи": "Статьи",
     "Укажите валюту>": "Укажите валюту>",
-    "Укажите страну>": "Укажите страну>>"
+    "Укажите страну>": "Укажите страну>>",
+    "{{count}} просмотров_zero": "{{count}} просмотров",
+    "{{count}} просмотров_one": "{{count}} просмотр",
+    "{{count}} просмотров_few": "{{count}} просмотра",
+    "{{count}} просмотров_many": "{{count}} просмотров"
 }
