--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,8 +11,5 @@
     "Профиль": "Profile",
     "Статьи": "Articles",
     "Укажите валюту>": "Currency>",
-    "Укажите страну>": "Country>",
-    "{{count}} просмотров_zero": "{{count}} views",
-    "{{count}} просмотров_one": "{{count}} view",
-    "{{count}} просмотров_other": "{{count}} views"
+    "Укажите страну>": "Country>"
 }
